[incubator-kie-issues#1240] Enable dmn runtime checks inside jitexecutor (#2057)
Co-authored-by: Gabriele-Cardosi <gabriele.cardosi@ibm.com>